Fix: image alignment and size problem

--- a/frontend/theme/extras/blocks/image.less
+++ b/frontend/theme/extras/blocks/image.less
@@ -1,3 +1,4 @@
+
 .block.image, .block.video {
   figure {
     margin: 0;
@@ -6,6 +7,23 @@
       width: auto;
       height: auto;
       aspect-ratio: auto 4 / 3;
+    }
+  }
+
+  &.align.center{
+    .image-wrapper.small{
+      figcaption{
+        width: 35%;
+        margin-left: auto;
+        margin-right: auto
+      }
+    }
+    .image-wrapper.medium {
+      figcaption {
+        width: 70%;
+        margin-left: auto;
+        margin-right: auto
+      }
     }
   }
 
@@ -39,6 +57,14 @@
     .video-inner{
       width: 100%;
     }
+    .image-wrapper.medium, .image-wrapper.small {
+      float: left !important;
+      img{
+        margin-right: 10px !important;
+        float: none !important;
+      }
+    }
+
 
 
     @media (max-width: 768px) {
@@ -63,7 +89,55 @@
           margin-bottom: 21px;
         }
       }
-      margin-left: -30%;
+    }
+
+    img {
+      max-width: 100%;
+    }
+  }
+
+  &.align.right {
+    margin-left: 0;
+
+    .video-inner {
+      width: 100%;
+    }
+
+    .image-wrapper.medium,
+    .image-wrapper.small {
+
+      float: right !important;
+      img {
+        margin-left: 10px !important;
+        float: none !important;
+      }
+    }
+
+
+
+    @media (max-width: 768px) {
+      margin-right: -20px;
+      margin-left: -20px;
+    }
+
+    @media (min-width: 769px) {
+      // margin-left: -15%;
+
+    }
+
+    @media (min-width: 1200px) {
+
+      figure.image-wrapper,
+      .video-inner {
+        padding-top: 50px;
+        margin-bottom: 45px;
+
+        img,
+        .ui.embed {
+          margin-right: 0 !important;
+          margin-bottom: 21px;
+        }
+      }
     }
 
     img {
@@ -84,5 +158,37 @@
   @media screen and (max-width: 768px){
     margin-left: 0px !important;
     margin-right: 0px !important;
+  }
+}
+
+.view-viewview{
+  .block.image, .block.video {
+    &.align.left {
+      @media (min-width: 1200px) {
+        margin-left: -30% !important;
+      }
+    }
+    &.align.right {
+      @media (min-width: 1200px) {
+        margin-right: -30% !important;
+      }
+    }
+  }
+}
+
+.view-editview {
+  .block.image,
+  .block.video {
+    &.align.left {
+      @media (min-width: 1200px) {
+        margin-left: -5% !important;
+      }
+    }
+
+    &.align.right {
+      @media (min-width: 1200px) {
+        margin-right: -5% !important;
+      }
+    }
   }
 }
